--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/node": "^16.18.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sharp": "^0.31.2",
     "typescript": "^4.9.3",
+    "use-breakpoint": "^3.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
