--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "sharp": "^0.31.2",
     "typescript": "^4.9.3",
     "use-breakpoint": "^3.0.6",
